Tk::CodeText module changes log

31 march 2024
	Update to version 0.47
	Fixed auto indent.
	Fixed bug with uncommenting.
	made lnumberCheck a bit quieter.

28 Feb 2024
	Update to version 0.46
	Focus now goes to the find entry when the search and replace frame appears
	Removed <FocusIn> and <FocusOut> bindings. I thought they made sense, they don't.


01 Oct 2023
	Update to version 0.45
	Added option -menutiems for the left-click popup menu.
	Added method saveExport.

15 septemer 2023
	Update to version 0.44
	Fixed bug in TagsEditor.

15 septemer 2023
	Update to version 0.43
	TagsEditor now shows correct in Metacpan.
	Highlighting and status bar updates now only happen when the widget has focus.
	Added -position option
	Focus now returns to text widget when search and replace window closes
	Method themeUpdate now calls highlightPurge at the end
	
04 june 2023
	Update to version 0.42. 
	Fixed documentation typos and errors.
	Fixed testing.

01 june 2023
	Update to version 0.41. 
	Moved internal MyKamelon to it's own pm, so metacpan does not have problems with it.

01 june 2023
	Update to version 0.40.
	Made a rewrite from scratch. See Readme.md.

27 march 2004
	update to version 0.3.4
	removed -headerbackground bug from RulesEditor
	renamed test.pl to demo.pl so testing without a connection to an
	X-server will not fail.

17 march 2004
	Update to version 0.3.2
	Added a decent test suite.
	Added support for bash.
	Modified Tk::CodeText::Template.pm to support a more structured approach
	for writing plugins. Things are backwards compatible. Plugins that inherit
	Tk::CodeText::Template also don't need to specify a 'syntax' method any more.
	Rewrote the rules editor, put it in a separate module.
	Numerous small changes and additions
	
22 April 2003
	Update to version 0.3.1
	Added slant option to rules editor.
	Corrected couple of mistakes in the documentation.

17 April 2003
	Update to version 0.3.0
	Modified clipboard handling.